chore: 4.21.1 (#1150)
* feat: let swagger ui fetch its token from the keycloak realm that protects the api

* style: drop the same-package and unused imports sonar flags in the bo module

* refactor: annotate the legacy sparql repositories with @Repository instead of @Component

* style: collapse the single-statement lambda blocks sonar flags in the bo module

* style: replace the lambdas sonar flags with method references in the bo tests

* style: replace the unused catch parameters sonar flags with the unnamed pattern

* style: rename the local variables sonar flags as restricted identifiers in the ddi module

* refactor: extract the duplicated string literals sonar flags into constants

* refactor: move the component repository off the deprecated rdfutils onto rdftriples and an injected iri factory

* style: guard the swagger oauth logs sonar flags with an isInfoEnabled check

* style: drop the redundant public modifiers sonar flags in the bo test setup methods

* style: drop the unused local variables sonar flags in the bo and ddi modules

* test: send the mismatched-id collection update so its 400 assertion actually runs

* feat: expose the dcterms identifier stamp of each organisation

* feat: promote the default contributor to an instance-wide property checked at startup

* fix: disable the default contributor check in tests under the prefix the validator actually reads

* style: build the default contributor validator outside the assertion lambdas sonar flags

* feat: grant the variables manager role stamp-scoped access to ddi physical instances

* feat: create one study unit logical product and variable scheme per study unit instead of per series

* Update version to 4.21.1-rc0 in pom.xml

* fix: skip the default contributor check in the aot training run, which has no graphdb

* feat: activate a module by its presence in the modules list and drop the disabled flag

* chore: translate the unknown default contributor error message to english

* chore: drop th